[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "nmap-scanning-tool"
version = "2.0.0"
description = "Production-ready CLI wrapper for Nmap scanning workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sagar Biswas" }
]
keywords = ["nmap", "security", "network", "scanner", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking",
]
dependencies = [
  "pyfiglet>=1.0.2,<2.0.0",
  "termcolor>=2.4.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "mypy>=1.11.2,<2.0.0",
  "pip-audit>=2.8.0,<3.0.0",
  "pre-commit>=4.0.1,<5.0.0",
  "pytest>=8.3.3,<10.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[project.scripts]
nmap-scanner = "nmap_scanning_tool.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/nmap_scanning_tool"]

[tool.pytest.ini_options]
addopts = "--cov=src/nmap_scanning_tool --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "main.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RET"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
show_error_context = true
files = ["src"]
warn_unused_ignores = true
